@@ -168,6 +168,7 @@ Version 1.3
  - Pull Request #595 - Aeotec Smart Switch Gen5 Config Updates from Gert
    Boer and Nechry (Justin)
  - Pull Request #594 - Aeotec Minimote Config Updates from Nechry (Justin)
+ - Update Aeon Labs to Aeotec as thats their Retail name (Justin)
 
 Version 1.2 
  - Released on 15/10/14
